refactor: remplacer keycloak-admin-client par OpenFeign
- Ajout spring-cloud-starter-openfeign (Spring Cloud 2023.0.3)
- Suppression keycloak-admin-client et du package mapper/
- Nouveau package client/ : RealmAdminClient, ClientAdminClient,
  UserAdminClient, RoleAdminClient (interfaces Feign sur /admin/realms/...)
- KeycloakTokenManager : obtient et cache le token admin via RestTemplate
- KeycloakFeignConfig : intercepteur Bearer (config per-client Feign)
- Services réécrits sans dépendance Keycloak SDK
- GlobalExceptionHandler migré de JAX-RS vers FeignException
- @EnableFeignClients sur la classe principale
- CLAUDE.md mis à jour

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>